// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API endpoints Issue create 1`] = `
{
  "comments": [
    {
      "body": "Comment body",
      "id": 1,
      "issue_id": 1,
    },
  ],
  "id": 1,
  "repo": [
    {
      "description": "Repo 1 description",
      "id": 1,
      "is_public": true,
      "latest_num": 1,
      "name": "Repo 1",
      "org_id": 1,
      "slug": "repo1",
    },
  ],
  "title": "Issue 1",
}
`;

exports[`API endpoints Org create 1`] = `
{
  "description": "Org NEW description",
  "id": 4,
  "name": "Org NEW",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "orgNEW",
}
`;

exports[`API endpoints Org get 1`] = `
{
  "description": "Org 1 description",
  "id": 1,
  "name": "Org 1",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "org1",
}
`;

exports[`API endpoints Org list 1`] = `
[
  {
    "description": "Org 1 description",
    "id": 1,
    "name": "Org 1",
    "nameAndDesc": "Org 1: Org 1 description",
    "slug": "org1",
  },
  {
    "description": "Org 2 description",
    "id": 2,
    "name": "Org 2",
    "nameAndDesc": "Org 2: Org 2 description",
    "slug": "org2",
  },
  {
    "description": "Org 3 description",
    "id": 3,
    "name": "Org 3",
    "nameAndDesc": "Org 3: Org 3 description",
    "slug": "org3",
  },
]
`;

exports[`API endpoints Org update 1`] = `
{
  "description": "Org 2A description",
  "id": 2,
  "name": "Org 2A",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "org2",
}
`;

exports[`API endpoints Org update foo 1`] = `
{
  "bar_id": 1,
  "id": 1,
  "name": "foo",
}
`;

exports[`API endpoints Org update foo no reference 1`] = `
{
  "code": "ERROR_CODE_VALIDATION",
  "data": {
    "errors": [
      "Can't find bar_slug with value: baz",
    ],
    "inner": [
      {
        "errors": [
          "Can't find bar_slug with value: baz",
        ],
        "inner": [],
        "message": "Can't find bar_slug with value: baz",
        "name": "ValidationError",
        "params": {
          "originalValue": "baz",
          "path": "bar_slug",
          "value": "baz",
        },
        "path": "bar_slug",
        "type": "noReference",
        "value": "baz",
      },
    ],
    "value": {
      "bar_slug": "baz",
      "name": "foo",
    },
  },
  "message": "Validation error",
}
`;

exports[`API endpoints Repo create 1`] = `
{
  "description": "Repo 6 description",
  "id": 6,
  "org_id": 1,
  "slug": "org_1-W5JU1e0Kj1Kv",
}
`;

exports[`API endpoints Repo get 1`] = `
{
  "description": "Repo 1 description",
  "id": 1,
  "org_id": 1,
  "slug": "repo1",
}
`;

exports[`API endpoints Repo list 1`] = `
[
  {
    "description": "Repo 1 description",
    "id": 1,
    "org_id": 1,
    "slug": "repo1",
  },
  {
    "description": "Repo 2 description",
    "id": 2,
    "org_id": 1,
    "slug": "repo2",
  },
  {
    "description": "Repo 3 description",
    "id": 3,
    "org_id": 1,
    "slug": "repo3",
  },
]
`;

exports[`API endpoints Repo update 1`] = `
{
  "description": "Repo 2A description",
  "id": 2,
  "org_id": 1,
  "slug": "repo2",
}
`;
